hard-gists/ec0dbce5688e6fcd2cb91ac1fb7d03ca/run.log
=== Docker Run Log for ec0dbce5688e6fcd2cb91ac1fb7d03ca ===
Started at: Mi 29. Okt 20:53:49 CET 2025

[2025-10-29 20:53:50] START: Running container for ec0dbce5688e6fcd2cb91ac1fb7d03ca
[2025-10-29 20:53:50] SUCCESS: Container 37af94a8746fe6acd403a8d2c81d3403aca961e0708b9632387550600376a115 started for ec0dbce5688e6fcd2cb91ac1fb7d03ca
=== Container logs for ec0dbce5688e6fcd2cb91ac1fb7d03ca ===
  File "/snippet.py", line 54
    print '\nlx.symbol.'.join(entries)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ec0dbce5688e6fcd2cb91ac1fb7d03ca ===
[2025-10-29 20:53:52] INFO: Container 37af94a8746fe6acd403a8d2c81d3403aca961e0708b9632387550600376a115 has stopped
